--- a/DogSite/package.json
+++ b/DogSite/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dogsite",
+  "homepage" : "https://sindhukumari-r.github.io/Petsneeds/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
